# geoai

./: .gitignore  README.md  TECHNICALS.md  data_scraper.py  pyproject.toml  run.py  script.js
data/country_guides/: ALB.md  AND.md  ARE.md  ARG.md  ASM.md  ATA.md  AUS.md  AUT.md  BEL.md  BGD.md  BGR.md  BLR.md  BMU.md  BOL.md  BRA.md  BTN.md  BWA.md  CAN.md  CCK.md  CHE.md  CHL.md  CHN.md  COL.md  CRI.md  CUW.md  CXR.md  CYP.md  CZE.md  DEU.md  DNK.md  DOM.md  ECU.md  EGY.md  ESP.md  EST.md  FIN.md  FLK.md  FRA.md  FRO.md  GBR.md  (+22 more)
data/geo/: us_polygon.geojson
geoai/: config.py
geoai/plonkit/: ingest.py
geoai/processing/: catalog.py  cell_stats.py  crop_runner.py  perspective.py  rasters.py  reverse_geo.py  s2_cells.py  split.py
geoai/scraper/: cli.py  coverage.py  db.py  sampler.py  streetview_client.py
geoai/serve/: api.py
geoai/stage1/: cells.py  country_prior.py  country_vocab.py  dataset.py  eval.py  explain.py  loss.py  model.py  predict.py  protonet.py  refinement.py  train.py
geoai/stage2/: __init__.py  extract.py  geocode.py  pinpoint.py  refine.py  verify.py
paper/: geoai_paper.md
scripts/: build_protonet_index.py  merge_protonet_shards.py
